--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" media="(prefers-color-scheme: dark)" type="image/x-icon" href="/favicon_light_mode.png" />
-    <link rel="icon" media="(prefers-color-scheme: light)" type="image/x-icon" href="/favicon_dark_mode.png" />
+    <link rel="icon" type="image/x-icon" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Forecasting Frontier Language Model Agent Capabilities</title>
   </head>
